@startuml UML

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods

class flight {
  number
  departure_date
  departure_date_effective
  arrival_date
  arrival_date_effective
  total_fuel_consumption_liter
}

class airport {
  code_IATA
  name
  address
  country
  city
  latitude
  longitude
  price_cents_euro_per_month
}

class airplane {
  registration_number
  model
  fuel_capacity
  brand
  price_cents_euro
  baggage_max_weight_kg
  baggage_allowed_dimensions_cm2
}

class maintenance_history {
  maintenance_date
  result
  cost_cents_euro
}

class employee {
  id
  first_name
  last_name
  job
  hire_date
  salary_cents_euro
}

class passenger {
  id
  first_name
  last_name
}

class ticket {
  code
  price_cents_euro
  baggage_weight_kg
  baggage_dimensions_cm2
}

class customer {
  email
  password
}

class seat {
  number
  class
}

class reservation {
  number
  date
}

class incident {
  number
  description
  date
}

airplane "1..1" -- "0..n" flight : Fly
seat "1..*" -- "1..1" airplane : Belongs
employee "1..*" -left- "1..1" flight : Fly
passenger "1..1" -- "1..*" ticket : Owns
ticket "0..*" --- "1..1" flight : Belongs
flight "0..*" -- "1..*" seat : Taken
reservation "1..1" -- "1..*" ticket : Buy

maintenance_history "0..*" -right- "1..1" airplane : Happen

flight "1..1" -right- "0..*" incident : Happen

flight "1..1" -- "0..*" airport : Departure
flight "1..1" -- "0..*" airport : Arrival

customer "1..1" -- "0..*" reservation : Book

@enduml
